--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,30 +2,23 @@
 
 <main>
     <section class="heading">
-        <img src="/static/img/FDND-logo.jpeg">
-        <h1>Dit is FDND</h1>
-        <p>Hallo! Neem een kijkje bij alle studenten van de opleiding FDND.</p>
-        <div class="button-row">
-            <button class="btnA squadBTN">SQUAD A</button>
-            <button class="btnB squadBTN">SQUAD B</button>
-            <button class="btnC squadBTN">SQUAD C</button>
-        </div>
+        <h1>Welkom bij het <span class="yellow">digitale</span> klassenboek van FDND leerjaar 2022/2023 <span aria-hidden>🏓</span></h1>
     </section>
+    <section class="filer-bar">
+        <button class="squadBTN">Squad A</button>
+        <button class="squadBTN">Squad B</button>
+        <button class="squadBTN">Squad C</button>
+    </section>
+
     <section class="profile-grid">
         <div class="container">
-            <div class="item student-card">
-                <div class="inner-card">
-                    <div class="card-header">
-                        <img class="student-img" src="/static/img/FDND-logo.jpeg">
-                    </div>
-                </div>
-            </div>
-            <div class="item"></div>
-            <div class="item"></div>
-            <div class="item"></div>
-            <div class="item"></div>
-            <div class="item"></div>
-            <div class="item"></div>
+            <div class="card-item"></div>
+            <div class="card-item"></div>
+            <div class="card-item"></div>
+            <div class="card-item"></div>
+            <div class="card-item"></div>
+            <div class="card-item"></div>
+            <div class="card-item"></div>
         </div>
     </section>
 </main>
