--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -9,7 +9,7 @@
         <meta name="keywords" content="">
 
         <link rel="stylesheet" type="text/css" href="/style.css">
-        <link rel="icon" type="image/x-icon" href="/static/img/">
+        <link rel="icon" type="image/x-icon" href="/static/img/favicon-32x32.png">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
 
