--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,20 +5,14 @@
         <h1>Welkom bij het <span class="yellow">digitale</span> klassenboek van FDND leerjaar 2022/2023 <span aria-hidden>🏓</span></h1>
     </section>
     <section class="filer-bar">
-        <button class="squadBTN">Squad A</button>
-        <button class="squadBTN">Squad B</button>
-        <button class="squadBTN">Squad C</button>
+        <button id="squadBTN-A" class="squadBTN">Squad A</button>
+        <button id="squadBTN-B" class="squadBTN">Squad B</button>
+        <button id="squadBTN-C" class="squadBTN">Squad C</button>
     </section>
 
     <section class="profile-grid">
-        <div class="container">
-            <div class="card-item"></div>
-            <div class="card-item"></div>
-            <div class="card-item"></div>
-            <div class="card-item"></div>
-            <div class="card-item"></div>
-            <div class="card-item"></div>
-            <div class="card-item"></div>
+        <div id="card-container" class="container">
+            <!-- Here the cards will load -->
         </div>
     </section>
 </main>
