--- a/public/style.css
+++ b/public/style.css
@@ -84,6 +84,7 @@ h1 {
     margin: .35%;
     flex: 0 1 calc(20% - .7%); /* <-- adjusting for margin */
     width: calc(20% - .7%);
+    transition: .2s;
 }
 
 .inner-card {
