--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
                     <% } else { %>
                         <p>Niet ingevuld</p>
                     <% } %>
-                    <a href="<%= "https://github.com/" + member.gitHubHandle %>" class="card-button">GitHub</a>
+                    <a href="<%= "https://github.com/" + member.gitHubHandle target="_blank" %>" class="card-button">GitHub</a>
                 </div>
             </div>
             <% }) %>
