--- a/public/style.css
+++ b/public/style.css
@@ -94,8 +94,8 @@ h1 {
 }
 
 .card-img {
-    width: 8rem;
-    height: 8rem;
+    width: 70%;
+    height: 70%;
     object-fit: cover;
     border-radius: 50%;
 }
@@ -113,7 +113,7 @@ h1 {
     background-color: #000;
     color: #fff;
     padding: 0.5rem;
-    width: 8rem;
+    width: 70%;
     border-radius: 0.5rem;
     display: inline-block;
     text-decoration: none;
@@ -191,7 +191,12 @@ h1 {
 }
 
 /* Mobile view */
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 600px) {
+
+    body, html {
+        width: 98%;
+        margin-left: 1%;
+    }
 
     /* Student cards */
     .card-item {
@@ -201,8 +206,17 @@ h1 {
 
     /* Typographie */
     h1 {
-        font-size: 3rem;
+        font-size: 2rem;
         margin: 0;
         padding: 0;
+    }
+
+    .card-img {
+        width: 6rem;
+        height: 6rem;
+    }
+
+    .card-button {
+        width: 80%;
     }
 }
