--- a/public/style.css
+++ b/public/style.css
@@ -60,7 +60,23 @@ h3 {
     background: linear-gradient(41deg, rgba(255,255,255,0) 0%, rgba(135,170,242,1) 0%, rgba(101,98,208,1) 100%);
 }
 
-.squadBTN {
+.inner-bar {
+    width: 100%;
+    display: inline-block;
+}
+
+.squad-select {
+    float: left;
+    width: 50%;
+}
+
+.filter-select {
+    float: left;
+    width: 50%;
+    text-align: right;
+}
+
+.filterBTN {
     padding: .8rem;
     border-radius: .5rem;
     border: 2px solid #232BBA;
@@ -72,7 +88,7 @@ h3 {
     font-size: .8rem;
 }
 
-.squadBTN:hover {
+.filterBTN:hover {
     background-color: #0f1bf92a;
     border: 2px solid #3d15b5;
     cursor: pointer;
@@ -137,6 +153,7 @@ h3 {
 
 .card-button:hover {
     cursor: pointer;
+    background-color: #000000d4;
 }
 
 .like-btn {
