--- a/public/style.css
+++ b/public/style.css
@@ -52,7 +52,7 @@ h3 {
 
 /* Filterbar styling */
 .filter-bar {
-    padding: 1.5rem;
+    padding: 1.5rem 1rem 1.5rem 1rem;
     margin-top: .5rem;
     margin-bottom: .3rem;
     border-radius: 1rem;
@@ -145,6 +145,7 @@ h3 {
     color: #fff;
     padding: 0.5rem;
     width: 70%;
+    margin: 0;
     border-radius: 0.5rem;
     display: inline-block;
     text-decoration: none;
