--- a/public/style.css
+++ b/public/style.css
@@ -226,6 +226,10 @@ h3 {
         margin: 0;
         padding: 0;
     }
+
+    .inner-card:hover {
+        padding: 1rem;
+    }
 }
 
 /* Mobile view */
@@ -256,5 +260,15 @@ h3 {
 
     .card-button {
         width: 80%;
+    }
+
+    .inner-card:hover {
+        padding: 1rem;
+    }
+
+    .filterBTN {
+        display: block;
+        margin: .5rem;
+        text-align: center;
     }
 }
