--- a/public/style.css
+++ b/public/style.css
@@ -41,6 +41,17 @@ h3 {
     -moz-text-fill-color: transparent;
 }
 
+.red {
+    background-color: red;
+    background-image: linear-gradient(45deg, #cc48f0, #ed1ee7);
+    background-size: 100%;
+    background-repeat: repeat;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; 
+    -moz-background-clip: text;
+    -moz-text-fill-color: transparent;
+}
+
 /* Heading styling */
 .heading {
     padding: 3rem 1rem 3rem 1rem;
@@ -57,7 +68,7 @@ h3 {
     margin-bottom: .3rem;
     border-radius: 1rem;
     background: rgb(255,255,255);
-    background: linear-gradient(41deg, rgba(255,255,255,0) 0%, rgba(135,170,242,1) 0%, rgba(101,98,208,1) 100%);
+    background: linear-gradient(41deg, rgba(255,255,255,0) 0%, rgba(135,209,242,1) 0%, rgba(212,211,247,1) 100%);
 }
 
 .inner-bar {
@@ -176,12 +187,19 @@ h3 {
     cursor: pointer;
 }
 
-.like {
+.on {
     animation-name: like;
     animation-duration: .3s;
     animation-iteration-count: 1;
     color: #e83c73;
 }
+
+input {
+    display:none;
+  }
+  :checked + label {
+    border: none;
+  }
 
 @keyframes like {
     0% {
