--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,7 @@ body, html {
     font-family: "Epilogue", Arial, Helvetica, sans-serif;
     width: 86%;
     margin-left: 7%;
-    background-color: black;
+    background-color: #050542;
 }
 
 /* Typographie */
