--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
                     <%# Dit is het hartje dat zich gedraagd als checkbox %>
                     <form action="/" method="post">
                         <input type="hidden" name="id" id="id" value="<%= member.id %>" />
-                        <input onChange="this.form.submit()" name="like" id="like" type="checkbox">
+                        <input name="like" id="like" type="checkbox">
                         <label for="like">
                             <p class="like-btn"><i class="fa fa-heart"></i></p>
                         </label>
