--- a/public/style.css
+++ b/public/style.css
@@ -138,7 +138,7 @@ h3 {
 
 .inner-card:hover {
     border-radius: 1rem;
-    background-color: #a4a8e9;
+    background-color: #9fd0ef;
 }
 
 .card-img {
