--- a/public/style.css
+++ b/public/style.css
@@ -22,6 +22,8 @@ h2 {
     padding: 1rem 1rem 1rem 1rem;
     margin: 0;
     color: white;
+    float: left;
+    width: 50%;
 }
 
 h3 {
@@ -102,6 +104,25 @@ h3 {
 .filterBTN:hover {
     background-color: #0f1bf92a;
     border: 2px solid #3d15b5;
+    cursor: pointer;
+}
+
+.form-submit-btn {
+    float: right;
+    padding: .8rem;
+    margin-right: 1rem;
+    margin-top: .5rem;
+    border-radius: .5rem;
+    border: 2px solid #ed1ee7;
+    background-color: transparent;
+    transition: .2s;
+    color: #ed1ee7;
+    font-weight: 600;
+    text-decoration: none;
+    font-size: .8rem;
+}
+
+.form-submit-btn:hover {
     cursor: pointer;
 }
 
